Fix text alignment on mobile

--- a/styles/text.css
+++ b/styles/text.css
@@ -4,6 +4,7 @@ body {
 
 h1, h2, h3 {
     font-family: 'Trebuchet MS', sans-serif;
+    text-align: center;
 }
 
 h1 {
